--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,34 @@
+# Base settings
 spring:
   application:
-    name: personal-site-backend
+    name: backend
+  jpa:
+    open-in-view: false
+    hibernate:
+      ddl-auto: validate
+    properties:
+      hibernate.format_sql: true
+      hibernate.jdbc.time_zone: UTC
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+
+# Dev profile
+---
+spring:
+  config:
+    activate:
+      on-profile: dev
+  datasource:
+    url: jdbc:postgresql://localhost:5432/appdb
+    username: appuser
+    password: secret
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    show-sql: false
+logging:
+  level:
+    org.hibernate.SQL: warn
+    org.springframework.jdbc.core: info
 server:
   port: 8080
