--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@ build/
 
 # macOS
 .DS_Store
+
+### Application Configuration (SENSITIVE - DO NOT COMMIT) ###
+src/main/resources/application.yml
+src/main/resources/application-*.yml
+src/main/resources/application.properties
+src/main/resources/application-*.properties
